# RL_project

./: .gitignore  README.md  block_blast_3p_env.py  block_blast_env.py  pyproject.toml  test_3p_env.ipynb  test_env.ipynb
dqn/: model.py
final_weigts/: dvn_final_20260313_020137.pt
notebooks/: benchmark_3p.ipynb  benchmark_3p_clean.ipynb  ddqn 1P.ipynb  ddqn.ipynb  dqn.ipynb  mct.ipynb  rainbow_1P.ipynb  test_3p_env.ipynb  test_dvn.ipynb  test_dvn_3p.ipynb  test_env.ipynb
report/: .latexmkrc  report.aux  report.fdb_latexmk  report.fls  report.out  report.tex  report.toc  slides.aux  slides.fdb_latexmk  slides.fls  slides.nav  slides.tex  slides.toc  slides_build.aux  slides_build.fdb_latexmk  slides_build.fls  slides_build.nav  slides_build.out  slides_build.toc
src/blockblast/: __init__.py  block_blast_3p_env.py  block_blast_env.py
src/dqn/: __init__.py  agent.py  model.py  models.py  train.py
src/dvn/: __init__.py  agent.py  benchmark.py  benchmark_3p.py  models.py  train.py
src/mct/: bc_trainer.py  benchmark_3p.py  mcts_agent.py  mcts_agent_first_only.py  mcts_collect.py  mcts_ppo_trainer.py  ppo_agent.py  ppo_finetune.py  train.py  value_weight_sweep.py
